src/pages/Connexion/connexion.scss
@use "../../assets/styles/variables" as *;
@use "sass:color";

main#connexion {
    section {
        display: flex;
        flex-wrap: wrap;
        gap: 30px;

        @media (max-width: $layout-breakpoint-small) {
            gap: 0 30px;
        }
        form {
            flex-grow: 8;
            &.order-inscription-mobile {
                @media (max-width: $layout-breakpoint-small) {
                    order: 2;
                    margin-top: 40px;
                }
            }
        }
        aside {
            flex-grow: 1;
            height: 100%;
            .success {
                order: 1;
                padding: 20px;
                background-color: #b3e9c7;
                font-size: 1.2em;
                display: block;
                span {
                    display: block;
                    font-size: 1.3em;
                }
                svg {
                    margin: 0 auto;
                    text-align: center;
                    font-size: 1.3em;
                }
            }
            div {
                background-color: color.scale($color-primary, $lightness: 30%);
                color: $color-black;
                margin-top: 30px;
                box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.3);
                border-radius: 8px;
                padding: 30px;
                h3 {
                    font-weight: 500;
                    margin-bottom: 20px;
                }
            }
        }
        .loading {
            h2 {
                text-transform: initial;
                text-align: center;
                margin: 20px auto;
            }
            [cssproperties="loader"] {
                display: block;
                margin: 30px auto 5px;
            }
        }
    }
}
#inscription form {
    margin-bottom: 70px;
}

.connexion fieldset,
#connexion fieldset {
    position: relative;
    border: 0;
    padding: 0;
    margin: 0;
    min-width: 0;
    .password-visibilty {
        color: $color-primary;
        background-color: color.scale($color-primary, $lightness: 85%);

        position: absolute;
        right: 0;
        top: 35px;
        padding: 17px;
        transition: 0.3s;
        cursor: pointer;
        &:hover {
            color: color.scale($color-primary, $lightness: -30%);
            background-color: color.scale($color-primary, $lightness: 70%);
        }
    }
}

